canary-deploy-isito/addons/istio-grafana-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: istio-grafana
  namespace: istio-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana-istio.home.clcreative.de`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    secretName: grafana-kiali-cert
