canary-deploy-isito/addons/istio-kiali-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: istio-kiali
  namespace: istio-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kiali.istio.home.clcreative.de`)
      kind: Rule
      services:
        - name: kiali
          port: 20001
  tls:
    secretName: istio-kiali-cert
